--- a/ClientMiniQuest/public/index.html
+++ b/ClientMiniQuest/public/index.html
@@ -8,9 +8,35 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babylonjs/4.1.0/babylon.js" integrity="sha256-IRmCyNooC7H6r9t99bFifu2ZizjqB0bO7owJTipmSZA=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
+    <style>
+    	body {
+    		margin-top:0px;
+    		margin-left:0px;
+    		margin-right:0px;
+    		margin-bottom:0px;
+    	}
+    	.container {
+		  	height: 100%;
+		    width: 100%;
+		    left: 0;
+		    top: 0;
+		    overflow: hidden;
+		    position: fixed;
+		}
+
+		#view {
+		  height: 100%;
+		  width: 100%;
+		  left: 0;
+		  top: 0;
+		  overflow: hidden;
+		}
+    </style>
 </head>
 <body>
-    <canvas id="view" width="900" height="600"></canvas>
+	<div class="container">
+    	<canvas id="view"></canvas>
+	</div>
     <script src="bundle.js"></script>
 </body>
 </html>
