--- a/ClientMiniQuest/public/index.html
+++ b/ClientMiniQuest/public/index.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-	<div class="container">
+	<div id="screen" class="container">
     	<canvas id="view"></canvas>
 	</div>
     <script src="bundle.js"></script>
